# study_gmm

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: python-error-check.yml
app/: run_training.py  sample_generator.py  train_gmm.py
study_gmm/: gmm.py  gmm_plot.py  hmm.py  hmm_plot.py  kmeans.py  kmeans_plot.py  run_kmeans.py  sample_generator.py  sampler.py
tests/: demo_hmm.py  demo_hmm_training.py  test_hmm.py  test_hmm_forward.py  test_hmm_training.py  test_kmeans.py  test_sample_generator.py
