[tool.poetry]
name = "study-gmm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [ {include = "study_gmm"} ]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scipy = "^1.11.2"


[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.3.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
