[project]
name = "study-gmm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.13" # Add this line
packages = [ {include = "study_gmm", from = "."} ]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scipy = "^1.11.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.3.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
flake8 = "^6.1.0"
pylint = "^3.3.1"
pylint-json2html = "^0.5.0"

[tool.pytest.ini_options]
pythonpath = [
  "."
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[flake8]
#select = F,E
