[project]
name = "study-gmm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.13"
packages = [ {include = "study_gmm", from = "."} ]
dependencies = [
    "numpy>=1.25.2,<2.0.0",
    "matplotlib>=3.7.2,<4.0.0",
    "scipy>=1.11.2,<2.0.0",
    "tqdm>=4.66.1,<5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "flake8>=6.0.0,<7.0.0",
    "pylint>=2.17.0,<3.0.0",
    "graphviz>=0.20.1,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.flake8]
exclude = [".venv", ".git", "__pycache__", "docs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[flake8]
#select = F,E
